# DeathStarBench

./: locust_stats_config.json  setup.sh
hotelReservation/: Dockerfile
hotelReservation/locust/: autothrottle-locustfile.py  reserve.py
socialNetwork/: Dockerfile
socialNetwork/src/: CMakeLists.txt  ClientPool.h  ThriftClient.h  logger.h  microservice_health.cpp  microservice_health.h  utils_health.h  utils_mongodb.h  utils_redis.h
socialNetwork/src/ComposePostService/: CMakeLists.txt  ComposePostHandler.h  ComposePostService.cpp
socialNetwork/src/HomeTimelineService/: CMakeLists.txt  HomeTimelineHandler.h  HomeTimelineService.cpp
socialNetwork/src/MediaService/: CMakeLists.txt  MediaHandler.h  MediaService.cpp
socialNetwork/src/PostStorageService/: CMakeLists.txt  PostStorageHandler.h  PostStorageService.cpp
socialNetwork/src/SocialGraphService/: CMakeLists.txt  SocialGraphHandler.h  SocialGraphService.cpp
socialNetwork/src/TextService/: CMakeLists.txt  TextHandler.h  TextService.cpp
socialNetwork/src/UniqueIdService/: CMakeLists.txt  UniqueIdHandler.h  UniqueIdService.cpp
socialNetwork/src/UrlShortenService/: CMakeLists.txt  UrlShortenHandler.h  UrlShortenService.cpp
socialNetwork/src/UserMentionService/: CMakeLists.txt  UserMentionHandler.h  UserMentionService.cpp
socialNetwork/src/UserService/: CMakeLists.txt  UserHandler.h  UserService.cpp
socialNetwork/src/UserTimelineService/: CMakeLists.txt  UserTimelineHandler.h  UserTimelineService.cpp
socialNetwork/src/WriteHomeTimelineService/: CMakeLists.txt  WriteHomeTimelineService.cpp
(+177 files in other folders)
